--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>DangKhoa_Dev • Tool Store + Admin (Demo VIP)</title>
+  <title>Thầy Thành Aov + Shop Uy Tín Số 1 Sever</title>
   <meta name="description" content="Website Bán Tool DangKhoa_Dev. Tool Tại Website Có Thể Mua Tại Chính Trang Web Này Qua Thanh Toán" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap');
@@ -757,7 +757,7 @@
                 <div class="banner-content-left">
                     <div class="banner-tag">⚡ Ready to innovate</div>
                     <h3 class="banner-main-title">Shop Thầy Thành</h3>
-                    <p class="banner-subtitle">Tool & Utilities</p>
+                    <p class="banner-subtitle">Tài Liệu Map Liên Quân</p>
                     <p class="banner-description">Menciptakan Website Yang Inovatif, Fungsional, dan User-Friendly untuk Solusi Digital.</p>
                     <div class="banner-skills">
                         <span class="skill-tag">React</span>
@@ -1113,11 +1113,11 @@
      ***********************/
     // CÁC ĐƯỜNG LINK TOOL CHỈ ĐỂ DEMO, KHÔNG CÓ CHỨC NĂNG THỰC TẾ TRONG FILE HTML NÀY
     const TOOLS = [
-      { id:'t1', name:'Tool Spam SMS', desc:'Spam OPT Qua Sim', price:150000, 
+      { id:'t1', name:'Tool Spam SMS', desc:'Mos Skin', price:150000, 
         detailLink:'https://example.com/sms-details', 
         downloadLink:'https://placehold.co/200x100/7873f5/fff?text=Download+SMS', 
         fullDesc: 'Công cụ giúp bạn gửi tin nhắn SMS hàng loạt một cách nhanh chóng và hiệu quả để tiếp cận khách hàng tiềm năng. Hỗ trợ gửi tin nhắn tùy chỉnh, lên lịch và quản lý danh sách người nhận.' },
-      { id:'t2', name:'Tool Spam Ngl', desc:'Spam Tin Nhắn Ngl', price:150000, 
+      { id:'t2', name:'Tool Spam Ngl', desc:'Hack Lq', price:150000, 
         detailLink:'https://example.com/ngl-details', 
         downloadLink:'https://placehold.co/200x100/ff6ec4/fff?text=Download+Ngl', 
         fullDesc: 'Gửi tin nhắn ẩn danh trên NGL một cách tự động. Tăng tương tác và tạo sự chú ý cho hồ sơ của bạn. Dễ dàng sử dụng và tùy chỉnh nội dung.' },
